Revision history for Gimp-Perl extension.

1.20
	- image types updated to reflect gimp's reality.
        - updated perlotine.

1.19  Thu Jan  6 00:21:58 CET 2000
        - used N_ to mark all the menu paths, since gimp now tries to
          do the translation.
        - patch by Frank Loemker <floemker@TechFak.Uni-Bielefeld.DE> to fix
          many missing :auto tags.
        - I removed the "old prefix" check that I was almost forced to
          implement. This was not a good idea, is not a good idea, and
          completely breaks on many occasions. Just do not do that. If
          only people would trust me sometimes :(
        - enabled gdrawable_id caching again.
        - some minor Gimp::UI streamlining & bugfixes.
        - more (undocumented) on_xxx hooks.
        - got rid of the old & crufty callback system (who uses it anyways?).
        - added Gimp::basewidget "pragma" and made Gimp::UI use it. Also
          sent a bugreport to the Gtk maintainer who will hopefully make
          a gtk-perl release soon.
        - the :auto import tag is no longer the default. neither with nor without
          warning.
        - sdf'ified pod documentation. more to come.
        - move perl-intl.h include below the other includes. William Sebok
          finally came up with a nice problem analysis.
        - try to get rid of -Wall, if possible.
        - shield more sections against -w dumbness.
        - updated many of seth's scripts.
        - added cs and no translations.
        - skip t/run when no DISPLAY set.
        - modernize parasite-editor to use Gimp::basewidget.
        - modified all custom widgets to work with the next Gtk release.
        - added examples/gap-vcr
        - applied Kevon Cozens patch to scm2scm. That's a great start, I
          should really add the rest of the function names.
        - use XSLoader instead of DynaLoader where available.
        - use perl_require_pv instead of perl_eval_pv.