@@ -3,7 +3,6 @@
 use Gimp::Feature 'pdl';
 use Gimp 1.091;
 use Gimp::Fu;
-use Gimp::Util;
 use PDL::LiteF;
 
 register "colour_to_alpha",
